# Midnight-zk_proof

./: .gitignore  .release.toml  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
aggregation/: CHANGELOG.md  Cargo.toml
aggregation/examples/: ivc.rs  multi_circuit_aggregation.rs  proof_aggregation.rs  single_circuit_aggregation.rs
aggregation/examples/circuits/: sha_preimage.rs
aggregation/examples/common/: mod.rs  sha_preimage.rs
aggregation/src/: lib.rs
aggregation/src/ivc/: circuit.rs  error.rs  mod.rs  prover.rs  setup.rs  verifier.rs
aggregation/src/light_aggregator/: light_fiat_shamir.rs  light_self_emulation.rs  mod.rs
aggregation/src/multi_circuit_aggregator/: aggregator.rs  circuit.rs  claims.rs  mod.rs  utils.rs
aggregator/: CHANGELOG.md  Cargo.toml  build.rs
aggregator/src/: inner_product_argument.rs  lib.rs  light_aggregator.rs  light_self_emulation.rs
circuits/: .license_headers.sh  .license_midnight.txt  CHANGELOG.md  Cargo.toml  README.md
circuits/benches/: poseidon_cpu.rs  zswap_output.rs
circuits/examples/: bitcoin_ecdsa_threshold.rs  bitcoin_signature.rs  ecc_ops.rs  exposing_types.rs  hybrid_mt.rs  ivc.rs  json_verification.rs  membership.rs  native_gadget.rs  parse_filecoin_srs.rs  poseidon.rs  rsa_signature.rs  schnorr_sig.rs  sha_preimage.rs
circuits/examples/assets/: .gitignore
circuits/examples/identity/: enrollment.rs  full_credential.rs  mod.rs  property_check.rs  utils.rs
circuits/goldenfiles/: cost-model.json
circuits/goldenfiles/examples/: AtalaJsonECDSA  BitcoinThresholdECDSA  EccExample  HybridMtExample  MembershipExample  NativeGadgetExample  PoseidonExample  RSASignatureCircuit  SchnorrExample  ShaPreImageCircuit
circuits/scripts/: foreign_params_gen.py  map_to_jubjub.sage
circuits/src/: circuit_field.rs  compact_std_lib.rs  lib.rs
circuits/src/biguint/: biguint_gadget.rs  mod.rs  types.rs
circuits/src/ecc/: curves.rs  mod.rs
circuits/src/field/: mod.rs
circuits/src/hash/: mod.rs  utils.rs
circuits/src/instructions/: arithmetic.rs  assertions.rs  assignments.rs  base64.rs  binary.rs  bitwise.rs  canonicity.rs  comparison.rs  control_flow.rs  conversions.rs  decomposition.rs  division.rs  divmod.rs  ecc.rs  equality.rs  field.rs  hash.rs  hash_to_curve.rs  map.rs  mod.rs  native.rs  public_input.rs  range_check.rs  scalar_field.rs  sponge.rs  vector.rs  zero.rs
circuits/src/map/: cpu.rs  map_gadget.rs  mod.rs
circuits/src/parsing/: automaton.rs  automaton_chip.rs  base64_chip.rs  data_types.rs  mod.rs  parser_gadget.rs  regex.rs  specs.rs  table.rs
circuits/src/utils/: circuit_modeling.rs  composable.rs  ecdsa.rs  mod.rs  plonk_api.rs  test_native_gadget.rs  test_std_lib.rs  types.rs  util.rs
circuits/src/vec/: mod.rs  vector.rs  vector_gadget.rs
circuits/src/verifier/: accumulator.rs  kzg.rs  lookup.rs  mod.rs  msm.rs  permutation.rs  traces.rs  transcript_gadget.rs  trash.rs  types.rs  utils.rs  vanishing.rs  verifier_gadget.rs
circuits/tests/: check_vks.rs  public_inputs.rs  serialization.rs
circuits/tests/static_vks/: AtalaJsonECDSAVk  BitcoinThresholdECDSAVk  CredentialEnrollmentVk  CredentialPropertyVk  EccExampleVk  FullCredentialVk  HybridMtExampleVk  MembershipExampleVk  NativeGadgetExampleVk  PoseidonExampleVk  RSASignatureCircuitVk  SchnorrExampleVk  ShaPreImageCircuitVk  ZSwapOutputCircuitVk
curves/: CHANGELOG.md  Cargo.toml  README.md
curves/benches/: ec.rs  field_arith.rs  msm.rs  pairing.rs
curves/src/: arithmetic.rs  fft.rs  fp.rs  fp12.rs  fp2.rs  fp6.rs  fq.rs  g1.rs  g2.rs  gt.rs  hash_to_curve.rs  lib.rs  msm.rs  pairing.rs  serde.rs  serde_impl.rs  serde_traits.rs
curves/src/bls12_381/: bls_pairing.rs  fp.rs  fp12.rs  fp2.rs  fp6.rs  fq.rs  g1.rs  g2.rs  gt.rs  mod.rs
curves/src/bn256/: curve.rs  engine.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs
curves/src/curve25519/: affine.rs  curve.rs  fp.rs  mod.rs
curves/src/derive/: curve.rs  mod.rs  pairing.rs
curves/src/ff_ext/: cubic.rs  inverse.rs  jacobi.rs  mod.rs  quadratic.rs
curves/src/jubjub/: arithmetic.rs  curve.rs  fr.rs  mod.rs
curves/src/k256/: base_field.rs  curve.rs  mod.rs
curves/src/p256/: mod.rs
curves/src/secp256k1/: curve.rs  fp.rs  fq.rs  mod.rs
curves/src/tests/: curve.rs  engine.rs  field_halo2curves.rs  mod.rs  pairing.rs
proofs/: CHANGELOG.md  Cargo.toml  README.md
proofs/benches/: commit_zk.rs  dev_lookup.rs  hashtocurve.rs  plonk.rs  zswap_output.rs
proofs/examples/: circuit-layout.rs  proof-size.rs  serialization.rs  simple-example.rs  two-chip.rs  vector-mul.rs  vector-ops-unblinded.rs
proofs/src/: lib.rs
proofs/src/circuit/: layouter.rs  mod.rs  table_layouter.rs  value.rs
proofs/src/dev/: cost.rs  cost_model.rs  failure.rs  gates.rs  graph.rs  metadata.rs  mod.rs  tfp.rs  util.rs
proofs/src/plonk/: circuit.rs  error.rs  evaluation.rs  keygen.rs  linearization.rs  logup.rs  lookup.rs  mod.rs  permutation.rs  prover.rs  traces.rs  trash.rs  vanishing.rs  verifier.rs
proofs/src/poly/: commitment.rs  domain.rs  mod.rs  query.rs
proofs/src/transcript/: implementors.rs  mod.rs
proofs/src/utils/: arithmetic.rs  benchmark_macros.rs  helpers.rs  mod.rs  multicore.rs  rational.rs
proofs/tests/: plonk_api.rs
zk_stdlib/: CHANGELOG.md  Cargo.toml  README.md
zk_stdlib/benches/: verify.rs
zk_stdlib/examples/: bitcoin_ecdsa_threshold.rs  bitcoin_signature.rs  cardano_signature.rs  ecc_ops.rs  ethereum_signature.rs  exposing_types.rs  hybrid_mt.rs  ivc.rs  membership.rs  native_gadget.rs  parse_filecoin_srs.rs  poseidon.rs  rsa_signature.rs  schnorr_sig.rs  sha_preimage.rs
zk_stdlib/examples/identity/: enrollment.rs  full_credential.rs  mod.rs  property_check.rs  property_check_opt.rs
zk_stdlib/goldenfiles/: cost-model.json
zk_stdlib/src/: lib.rs
zk_stdlib/src/utils/: mod.rs  (+2 more)
zk_stdlib/tests/: check_vks.rs  public_inputs.rs  serialization.rs
zkir/: CHANGELOG.md  Cargo.toml
zkir/examples/: factoring.rs  rsa_signature_zkir.rs  schnorr.rs  simple.rs
zkir/src/: error.rs  lib.rs  types.rs  zkir.rs
zkir/tests/: operations.rs
(+227 files in other folders)
