[workspace]
resolver = "2"

members = ["proofs", "curves", "circuits", "aggregator"]

[workspace.dependencies]
ff = "0.13"
group = "0.13"
halo2curves = { version = "0.7.0", default-features = false }
rand_core = { version = "0.6", default-features = false }
tracing = "0.1"
blake2b_simd = "1"                                            # MSRV 1.66.0
rand_chacha = "0.3"
rayon = "1.10"


## Benchmarks

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1

# Allows to extract debug symbols to do mem/perf profiling while aiming for maximum performance
[profile.heap_profiling]
inherits = "release"
opt-level = 3
debug = 1
