[workspace]
resolver = "2"

members = ["proofs", "curves", "circuits", "aggregator", "zkir"]

package = { license-file = "LICENSE" }

[workspace.dependencies]
ff = "0.13"
group = "0.13"
halo2curves = { version = "0.7.0", default-features = false }
rand = { version = "0.8" }
rand_core = { version = "0.6", default-features = false }
tracing = "0.1"
blake2b_simd = "1"                                            # MSRV 1.66.0
rand_chacha = "0.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1" }
serde_json = { version = "1" }
num-bigint = { version = "0.4" }
sha2 = "0.10.9"
sha3 = "0.10.8"

# Avoids type unification errors when third-party repos are integrated to midnight-circuits. Since 
# both such repos and midnight-circuits import midnight-proofs, they end up with an isomorphic 
# (but different) copy of their midnight-proofs dependency. The below version enforces that they 
# both get use the local crate.
[patch."https://github.com/midnightntwrk/midnight-zk"]
midnight-proofs = { path = "proofs" }
midnight-curves = { path = "curves" }

## Benchmarks

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1

# Allows to extract debug symbols to do mem/perf profiling while aiming for maximum performance
[profile.heap_profiling]
inherits = "release"
opt-level = 3
debug = 1
