[package]
name = "midnight-aggregation"
version = "0.1.2"
edition = "2021"
rust-version = "1.76.0"
description = "Toolkit for proof aggregation of midnight-proofs"
license = "MIT OR Apache-2.0"
categories = ["cryptography"]
keywords = ["halo", "proofs", "zkp", "zkSNARKs", "aggregation"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[dependencies]
group = { workspace = true }
ff = { workspace = true }
midnight-curves = "0.2.0"
midnight-proofs = { version = "0.7.0", default-features = false, features = [
    "circuit-params",
    "committed-instances",
] }
midnight-circuits = { version = "6.0.0", default-features = false, features = [
    "testing",
] }
midnight-zk-stdlib = { path = "../zk_stdlib", version = "1.0.0" }

rand = { workspace = true }
blake2b_simd = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
rand_chacha = { workspace = true }

[features]
truncated-challenges = [
    "midnight-proofs/truncated-challenges",
    "midnight-circuits/truncated-challenges",
]
