[package]
name = "midnight-aggregator"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"
description = "Toolkit for proof aggregation of midnight-proofs"
license = "MIT OR Apache-2.0"
categories = ["cryptography"]
keywords = ["halo", "proofs", "zkp", "zkSNARKs", "aggregation"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[dependencies]
group = { workspace = true }
ff = { workspace = true }
halo2curves = { version = "0.7.0", default-features = false }
midnight-curves = { path = "../curves", version = "0.1.0" }
midnight-proofs = { path = "../proofs", version = "0.4.0", default-features = false, features = [
    "bits",
    "cost-estimator",
    "circuit-params",
    "committed-instances",
] }
midnight-circuits = { path = "../circuits", default-features = false, features = [
    "testing",
] }

rand = "0.8"
blake2b_simd = "1.0.3"
sha2 = "0.10.9"

[dev-dependencies]
rand_chacha = { workspace = true }
