[package]
name = "midnight-aggregator"
version = "0.1.2"
edition = "2021"
rust-version = "1.76.0"
description = "Toolkit for proof aggregation of midnight-proofs"
license = "MIT OR Apache-2.0"
categories = ["cryptography"]
keywords = ["halo", "proofs", "zkp", "zkSNARKs", "aggregation"]
build = "build.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[dependencies]
group = { workspace = true }
ff = { workspace = true }
midnight-curves = { git = "https://github.com/midnightntwrk/midnight-zk.git", tag = "midnight-curves-v0.2.0" }
midnight-proofs = { git = "https://github.com/midnightntwrk/midnight-zk.git", tag = "midnight-proofs-v0.6.0", default-features = false, features = [
    "circuit-params",
    "committed-instances",
] }
midnight-circuits = { path = "../circuits", version = "5.0.1", default-features = false, features = [
    "testing",
] }
midnight-zk-stdlib = { path = "../zk_stdlib", version = "0.1.0" }

rand = { workspace = true }
blake2b_simd = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
rand_chacha = { workspace = true }

[features]
# This feature is defined to allow conditional compilation when building
# with --all-features. The aggregator does not support truncated-challenges,
# and a warning will be emitted during build if this feature is enabled.
truncated-challenges = []
