[package]
name = "midnight-circuits"
version = "6.0.0"
edition = "2021"
license-file.workspace = true
description = "Circuit and gadget implementations for Midnight zero-knowledge proofs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
group = { workspace = true }
ff = { workspace = true }
rustc-hash = "2"
midnight-curves = "0.2.0"
midnight-proofs = { version = "0.7.0", default-features = false, features = [
    "circuit-params",
    "committed-instances",
] }

keccak_sha3 = { package = "sha3-circuit", version = "0.1.0" }
blake2b = { package = "blake2b_halo2", version = "0.1.0" }

serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true }
rand = { workspace = true }

num-bigint = { version = "0.4" }
num-traits = "0.2"
num-integer = "0.1"
subtle = "2.6"
base64 = "0.13.1"
lazy_static = "1.5.0"

[dev-dependencies]
criterion = "0.7"
rand_chacha = "0.3.1"
goldenfile = "=1.8.0"
num-bigint = { workspace = true, features = ["rand"] }
serde_json = { workspace = true }
itertools = "0.14"
dhat = "0.3"
sha3 = "0.10.0"
blake2 = "0.10.6"

[target.'cfg(ci_build)'.dependencies]
midnight-curves = { version = "0.2.0", features = [
    "portable",
] }

[features]
default = []
# Feature that exposes some testing functionality, such as load from scratch or instantiable
testing = ["num-bigint/rand"]
heap_profiling = []
# Enable truncated challenges. This makes recursive proofs more efficient
truncated-challenges = ["midnight-proofs/truncated-challenges"]
# Enable development curves (BN256, Pasta)
dev-curves = ["midnight-curves/dev-curves", "midnight-proofs/dev-curves"]

[lib]
bench = false

[[bench]]
name = "poseidon_cpu"
harness = false
