[package]
name = "midnight-curves"
description = "Implementation of BLS12 381 and Jubjub curves."
version = "0.2.0"
authors = ["dignifiedquire <me@dignifiedquire.com>", "Midnight team"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/midnightntwrk/midnight-zk/"
categories = ["cryptography", "algorithms"]
readme = "README.md"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dependencies]
blst = { version = "0.3.15", default-features = true }
pairing = { version = "0.23" }
subtle = "2.6"
bitvec = "1.0.1"
byte-slice-cast = "1.2.3"
num-bigint = "0.4.6"

serde = { workspace = true, optional = true }
serde_arrays = { version = "0.2.0", optional = true }
rand_core = { workspace = true }
ff = { workspace = true }
group = { workspace = true, features = ["tests"]  }
rayon = "1.10"
paste = "1.0"
lazy_static = "1.4"
hex = { version = "0.4.3", optional = true, features = ["serde"] }

# For secp256k1 implementation
halo2derive = "0.2.0"
sha2 = "0.10"
digest = "0.10"


[dev-dependencies]
rand_xorshift = "0.3.0"
rand = "0.8"
serde_json = "1.0.143"
bincode = "1.3"
hex = "0.4.3"
criterion = { version = "0.7", features = ["html_reports"] }
ark-std = "0.4"
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["serde", "std"]
std = []
serde = ["dep:serde", "dep:serde_arrays", "dep:hex"]
portable = ["blst/portable"]
__private_bench = []
dev-curves = []

[[bench]]
name = "field_arith"
harness = false

[[bench]]
name = "ec"
harness = false

[[bench]]
name = "msm"
harness = false

[[bench]]
name = "pairing"
harness = false
