[package]
name = "midnight-proofs"
version = "0.7.0"
edition = "2021"
rust-version = "1.76.0"
description = """
Fast PLONK-based zero-knowledge proving system
"""
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["cryptography"]
keywords = ["halo", "proofs", "zkp", "zkSNARKs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[[bench]]
name = "commit_zk"
harness = false

[[bench]]
name = "plonk"
harness = false

[[bench]]
name = "dev_lookup"
harness = false

[[bench]]
name = "zswap_output"
required-features = ["bench-internal"]
harness = false

[dependencies]
ff = { workspace = true }
group = { workspace = true }
midnight-curves = "0.2.0"
rand_core = { workspace = true, features = ["getrandom"] }
tracing = { workspace = true }
blake2b_simd = { workspace = true }
rand_chacha = { workspace = true }
itertools = "0.14"
serde = { workspace = true }
serde_derive = { workspace = true }
rayon = { workspace = true }
criterion = { version = "0.7", optional = true }
rustc-hash = "2"

# Developer tooling dependencies
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
num-bigint = { workspace = true }

[dev-dependencies]
assert_matches = "1.5"
proptest = "1"
serde_json = { workspace = true }
midnight-circuits = { path = "../circuits" }
midnight-zk-stdlib = { path = "../zk_stdlib" }
sha2 = { workspace = true }
rand = { workspace = true }
criterion = "0.7"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(ci_build)'.dependencies]
midnight-curves = { version = "0.2.0", features = [
  "portable",
] }

[features]
default = ["committed-instances"]
circuit-params = []
derive_serde = ["midnight-curves/serde"]
dev-curves = ["midnight-curves/serde"]

# This feature truncates challenges to half the size of the scalar field.
truncated-challenges = []

# This feature adds a new argument to prover and verifier functions, which
# represents instances in committed form (e.g. in the form of a polynomial
# commitment instead of a vector of scalars).
# The verifier may not know what the content of the commitment is, but can
# be sure that the content is constrained according to the circuit rules.
#
# This feature is very powerful for proving statements on committed data.
committed-instances = []

# Feature to expose internal prover types and benchmarking utilities.
bench-internal = ["criterion"]

# Feature to commit to the quotient polynomial H as a single polynomial
# commitment instead of splitting it into degree-(n-1) limbs. Requires the
# KZG parameters to support polynomials of degree up to (d-1)*(n-1), where d
# is the maximum constraint degree and n is the circuit domain size (i.e., the
# params must be generated with k >= log2(n * (d-1))).
single-h-commitment = []

# Enables a heuristic to reduce the number of distinct multi-open point sets,
# lowering the verifier MSM length. This can be particularly beneficial for
# in-circuit verifiers. The heuristic works by adding dummy queries for some
# polynomials, which may slightly increase proof size.
fewer-point-sets = []

[lib]
bench = false
